# pyarraypool

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  pyproject.toml
.github/workflows/: pytest.yaml  release.yaml  rust.yml
doc/: KNOWN_ISSUES.md
example/: ray_vs_pyarraypool.py  simple_task.py
notebook/: perf_analysis.ipynb
python/pyarraypool/: __init__.py  pyarraypool.pyi
src/: lib.rs  main.rs  memory_info.rs  metadata.rs  mutex.rs  shm.rs
tests/: conftest.py  test_pool.py
