[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[project]
name = "pyarraypool"
description = "Manage pool of array using shared memory"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
keywords = ["sharedmemory", "pool", "ndarray"]
maintainers = [
  {name = "Arthur LE MOIGNE", email = "arthur.lemoigne@gmail.com"}
]

[tool.maturin]
python-source = "python"