[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[project]
name = "pyarraypool"
description = "Manage pool of array using shared memory"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries",
]
keywords = ["sharedmemory", "pool", "ndarray"]
maintainers = [
    {name = "Arthur LE MOIGNE", email = "arthur.lemoigne@gmail.com"}
]
readme = "README.md"

dependencies = [
    "numpy",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov[all]",
    "flake8",
    "autopep8",
    "isort",
    "mypy",
]

[project.urls]
homepage = "https://github.com/arthurlm/pyarraypool"
repository = "git@github.com:arthurlm/pyarraypool.git"

[tool.maturin]
python-source = "python"